axportal_frontend/k8s/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: axportal
  name: frontend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: nodetype
                    operator: In
                    values:
                      - app
      containers:
        - image: 356062354410.dkr.ecr.ap-northeast-2.amazonaws.com/axplatform/axportal_frontend:latest
          imagePullPolicy: Always
          name: frontend
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: "2Gi"
