axportal_frontend/k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: axportal
  name: frontend
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: frontend
